# hotel_review_score_prediction

./: .gitignore  README.md  data_preprocessing.ipynb  prediction.ipynb  pyproject.toml  requirements.txt  score_prediction.ipynb
