[project]
name = "hotel-review-score-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "catboost>=1.2.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "pandas>=2.2.3",
    "phik>=0.12.4",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]
